--- a/MonkeyFinder/View/DetailsPage.xaml
+++ b/MonkeyFinder/View/DetailsPage.xaml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage
+    ios:Page.UseSafeArea="True"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     x:Class="MonkeyFinder.DetailsPage"
     xmlns:viewmodel="clr-namespace:MonkeyFinder.ViewModel"
+    xmlns:ios="clr-namespace:Microsoft.Maui.Controls.PlatformConfiguration.iOSSpecific;assembly=Microsoft.Maui.Controls"
     x:DataType="viewmodel:MonkeyDetailsViewModel"
     Title="{Binding Monkey.Name}">
     <ScrollView>
@@ -30,7 +32,14 @@
             Source="{Binding Monkey.Image}"
             WidthRequest="160"/>
             </Border>
+            <Button Text="Show on Map" 
+        Command="{Binding OpenMapCommand}"
+        HorizontalOptions="Center" 
+        WidthRequest="200" 
+        Margin="8"
+        Style="{StaticResource ButtonOutline}"/>
 
+            <Label Style="{StaticResource MediumLabel}" Text="{Binding Monkey.Details}" />
             <Label Style="{StaticResource LargeLabel}" 
         Grid.Row="1"
         TextColor="White"
